@@ -333,7 +333,7 @@ class KeyControllerTest {
         final var actualBody = actual.getBody();
         Assertions.assertNotNull(actualBody);
         Assertions.assertEquals(HttpStatus.OK, actual.getStatusCode());
-        Assertions.assertEquals(expected.toString(), actualBody.getValue().get(0).getKeyId());
+        Assertions.assertEquals(expected.toString(), actualBody.getValue().getFirst().getKeyId());
         Assertions.assertNotNull(actualBody.getNextLink());
         Assertions.assertEquals(expectedNextUri, actualBody.getNextLink());
     }
@@ -590,7 +590,7 @@ class KeyControllerTest {
         Assertions.assertNotNull(actual.getBody());
         Assertions.assertNotNull(actual.getBody().getValue());
         Assertions.assertEquals(1, actual.getBody().getValue().size());
-        Assertions.assertSame(keyItemModel, actual.getBody().getValue().get(0));
+        Assertions.assertSame(keyItemModel, actual.getBody().getValue().getFirst());
         verify(vaultService).findByUri(HTTPS_LOCALHOST_8443);
         verify(vaultFake).keyVaultFake();
         verify(vaultFake).getRecoveryLevel();
@@ -633,7 +633,7 @@ class KeyControllerTest {
         Assertions.assertNotNull(actual.getBody());
         Assertions.assertNotNull(actual.getBody().getValue());
         Assertions.assertEquals(1, actual.getBody().getValue().size());
-        Assertions.assertSame(keyItemModel, actual.getBody().getValue().get(0));
+        Assertions.assertSame(keyItemModel, actual.getBody().getValue().getFirst());
         final var expectedNextLink = HTTPS_LOCALHOST_8443 + "/keys?api-version=7.4&$skiptoken=1&maxresults=1";
         Assertions.assertEquals(expectedNextLink, actual.getBody().getNextLink());
         verify(vaultService).findByUri(HTTPS_LOCALHOST_8443);
@@ -680,7 +680,7 @@ class KeyControllerTest {
         Assertions.assertNotNull(actual.getBody());
         Assertions.assertNotNull(actual.getBody().getValue());
         Assertions.assertEquals(1, actual.getBody().getValue().size());
-        Assertions.assertSame(keyItemModel, actual.getBody().getValue().get(0));
+        Assertions.assertSame(keyItemModel, actual.getBody().getValue().getFirst());
         verify(vaultService).findByUri(HTTPS_LOCALHOST_8443);
         verify(vaultFake).keyVaultFake();
         verify(vaultFake).getRecoveryLevel();
@@ -768,7 +768,7 @@ class KeyControllerTest {
         Assertions.assertNotNull(actual.getBody());
         Assertions.assertNotNull(actual.getBody().getValue());
         Assertions.assertEquals(1, actual.getBody().getValue().size());
-        Assertions.assertSame(keyItemModel, actual.getBody().getValue().get(0));
+        Assertions.assertSame(keyItemModel, actual.getBody().getValue().getFirst());
         final var expectedNextLink = HTTPS_LOCALHOST_8443 + "/deletedkeys?api-version=7.4&$skiptoken=1&maxresults=1";
         Assertions.assertEquals(expectedNextLink, actual.getBody().getNextLink());
         verify(vaultService).findByUri(HTTPS_LOCALHOST_8443);
